--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-table": "^7.7.0",
     "react-text-mask": "^5.4.3",
     "react-timer-hook": "^3.0.5",
+    "react-use-websocket": "^2.9.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "simplebar-react": "^2.3.3",
