--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-text-mask": "^5.4.3",
     "react-timer-hook": "^3.0.5",
     "react-use-websocket": "^2.9.1",
+    "recharts": "^2.1.6",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "simplebar-react": "^2.3.3",
