--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   },
   "scripts": {
     "start": "react-scripts start -r dotenv/config",
-    "build": "react-scripts build",
+    "build": "react-scripts  --openssl-legacy-provider build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "flow": "flow",
