--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone": "^11.3.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-hook-form": "^7.0.7",
     "react-i18next": "^11.8.12",
     "react-jsonrpc-client": "^1.0.0",
